# acled

./: .env.example  .gitignore  LICENSE  Makefile  README.md  dagster.yaml  pyproject.toml  workspace.yaml
acled/: __init__.py  dataset.py  features.py  plots.py
acled/modeling/: predict.py  train.py
config/: folder_config.py  secrets_config.py
dagster-acled/: pyproject.toml
dagster-acled/dagster_acled/: definitions.py
dagster_acled/: pyproject.toml  setup.cfg
dagster_acled/dagster_acled/: assets.py  definitions.py  dg_config.py
dagster_pipeline/: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  setup.py
dagster_pipeline/dagster_acled/: Dockerfile  acled_client.py  acled_request_config.py  definitions.py  jobs.py  oauth.ipynb  partitions.py  resources.py  schedules.py  secrets_config.py  sensors.py  utils.py
dagster_pipeline/dagster_acled/asset_checks/: acled_checks.py  base_checks.py  checks.yaml
dagster_pipeline/dagster_acled/assets/: acled.py  asset_factory.py  assets.yaml  base_assets.py  country_assets.py  ml.py  report.py
dagster_pipeline/dagster_acled/resources/: io_manager.py  resource_config.yaml  resources.py
dagster_pipeline/infra/base/: main.tf  postgres.tf  vpc.tf
dagster_pipeline/infra/core/: alb.tf  ecr_credentials.tf  main.tf  postgres_credentials.tf  variables.tf
dagster_pipeline/infra/dagster /: ecr.tf  images.tf  main.tf  outputs.tf  services.tf
dagster_pipeline/infra/dagster /docker/: Dockerfile  pyproject.toml  workspace.yaml
dagster_pipeline/infra/locations/: ecr.tf  images.tf  main.tf  secrets.tf  services.tf  variables.tf
notebooks/: acled_test.ipynb  ml.ipynb
