[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "acled"
version = "0.0.1"
description = "An ACLED experiment"
authors = [
  { name = "Stefan Bojilov" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "aiohttp>=3.12.13",
    "aioboto3==15.1.0",
    "aiobotocore==2.24.0",
    "aiofiles==24.1.0",
    "aioitertools==0.12.0",
    "aws-advanced-python-wrapper>=1.2.0",
    "azure-identity>=1.23.0",
    "azure-keyvault-secrets>=4.9.0",
    "boto3",
    "botocore",
    "cairocffi==1.7.1",
    "cairosvg==2.8.2",
    "click-aliases==1.0.5",
    "cssselect2==0.8.0",
    "dagster-aws>=0.27.1",
    "dagster-cloud-cli==1.11.7",
    "dagster-dg-cli==1.11.7",
    "dagster-dg-core==1.11.7",
    "dagster-duckdb>=0.27.1",
    "dagster-webserver>=1.11.7",
    "fastapi==0.116.1",
    "github3-py==4.0.1",
    "ipython",
    "jupyterlab",
    "line-profiler==5.0.0",
    "loguru",
    "markdown==3.8.2",
    "matplotlib",
    "notebook",
    "numpy",
    "pandas",
    "pip",
    "polars>=1.31.0",
    "psycopg>=3.2.9",
    "psycopg2-binary>=2.9.10",
    "pygal==3.0.5",
    "pygal-maps-ua==1.0.2",
    "pypdf==6.0.0",
    "pypdf2==3.0.1",
    "pytest",
    "python-dotenv",
    "questionary==2.1.0",
    "ruff",
    "scikit-learn",
    "seaborn==0.13.2",
    "termcolor==2.3.0",
    "tomlkit",
    "tqdm",
    "typer",
    "uritemplate==4.2.0",
    "xlsxwriter>=3.2.5",
    "yaspin==3.1.0",
    "xgboost>=3.0.4",
    "dagster>=1.11.7",
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["acled"]
include = ["pyproject.toml", "acled/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["acled"]
force-sort-within-sections = true

